# firebird-assistent

./: LICENSE  README.md  out.csv  pyproject.toml
src/firebird_assistant/: __main__.py  config.py  connection.py  dbapi.py  fb_utils.py  gbak_runner.py  logging_setup.py  profiles.py
